// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en GifExpertApp debe mostrar una lista de categorias 1`] = `
<Fragment>
  <h1>
    GifExpertApp
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="HunterXHunter"
      key="HunterXHunter"
    />
    <GifGrid
      category="OnePiece"
      key="OnePiece"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en GifExpertApp debe mostrarse correctamente 1`] = `
<Fragment>
  <h1>
    GifExpertApp
  </h1>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
